--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start -p 3300"
+    "start": "next start -p $PORT"
   },
   "keywords": [],
   "author": "",
