--- a/package.json
+++ b/package.json
@@ -7,9 +7,19 @@
     "dev": "next",
     "build": "next build",
     "start": "next start -p $PORT",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test": "jest"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.js$": "<rootDir>/node_modules/babel-jest"
+    },
+    "moduleNameMapper": {
+      "\\.(css|scss)$": "<rootDir>/__mocks__/styleMock.js"
+    },
+    "setupFiles": [
+      "./enzyme.js"
+    ],
+    "setupTestFrameworkScriptFile":"<rootDir>/__mocks__/localStorageMock.js"
   },
   "keywords": [],
   "author": "",
@@ -18,22 +28,15 @@
     "next": "^9.3.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-time-ago": "^5.0.7",
     "react-timeago": "^4.4.0"
   },
   "devDependencies": {
-    "@types/enzyme": "^3.10.5",
-    "@types/enzyme-adapter-react-16": "^1.0.6",
-    "@types/jest": "^25.2.1",
-    "babel-core": "^6.26.3",
-    "babel-jest": "^25.2.6",
-    "babel-preset-env": "^1.7.0",
+    "babel-jest": "^21.2.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
-    "enzyme-to-json": "^3.4.4",
-    "jest": "^25.2.7",
-    "ts-jest": "^25.3.1",
-    "typescript": "^3.8.3"
+    "enzyme": "^3.1.0",
+    "enzyme-adapter-react-16": "^1.0.2",
+    "jest": "^21.2.1",
+    "jest-cli": "^21.2.1"
   }
 }
